# boardie

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
boardie/: __init__.py  __main__.py
