[project]
name = "boardie"
version = "0.1.0"
description = "Linux soundboard"
authors = [
  {name = "Jack O'Sullivan", email = "j@ckos.ie"}
]
readme = "README.md"

dependencies = [
  "evdev~=1.9.2",
  "pydub~=0.25.1",
  "pyaudio~=0.2.14",
  "pyyaml~=6.0.2",
]

[project.scripts]
boardie = 'boardie:main'
